Fixed issue with item not aligning in the middle

--- a/src/App.css
+++ b/src/App.css
@@ -6,36 +6,43 @@
   text-align: center;
   background-image: url("./Images/lukas-blazek-EWDvHNNfUmQ-unsplash.jpg");
   background-size: cover;
-  height: 100vh;
+  overflow: hidden;
+}
+
+.AppContent{
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
   color: darkslategrey;
   text-shadow: 0px 0px 8px white;
-  overflow: hidden;
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 div{
-  overflow: auto;
+  text-align: center;
 }
 
 .NavBar{
-  padding: 20px;
-  /* background-color: rgba(0,0,0,0.5); */
+  padding: 20px 0px;
+  background-color: rgba(0,0,0,0.5);
+  width: 100vw;
 }
 
 .NavLink{
   text-decoration: none;
-  color: darkslategrey;
+  color: white;
   margin: 8px;
-  text-shadow: 0px 0px 8px white;
+  text-shadow: 0px 0px 0px white;
 }
 
 .NavLinkActive{
   text-decoration: none;
   color: white;
   margin: 8px;
+  text-shadow: 0px 0px 8px white;
 }
 
 img{
@@ -78,6 +85,8 @@ button{
 }
 
 .CocktailInfoDiv{
+  
+  width: 40%;
   margin-top: 8vh;
   background-color: rgba(255, 255, 255, 0.5);
   padding: 30px 50px;
